--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
-baseurl      = "localhost"
-title        = "My Blog"
+baseurl      = "blog.secondbraincell.com"
+title        = "Second Braincell"
 languageCode = "en-us"
 theme        = "hello-friend-ng"
 paginate     = 10
